--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <link rel="stylesheet" href="css/swiper.css">
     <link rel="stylesheet" href="css/index.css">
 </head>
-<!--<div class="musicBox">
+<div class="musicBox">
     <div class="music musicMove" id="music">
         <audio src="audio/1.mp3" preload="none" loop id="musicAudio"/>
     </div>
-</div>-->
+</div>
 <section class="swiper-container">
     <div class="swiper-wrapper">
         <div class="swiper-slide page1">
